--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+language: python
+
 python:
    -  3.6
+   
 install:
    - pip install -r requirements.txt
    - pip install coveralls
+
+script:
+   - nosetests --with-coverage --cover-package=tests
+
 after_success:
    - coveralls
