--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
    - pip install coveralls
 
 script:
-   - nosetests --with-coverage --cover-package=tests
+   - nosetests -v --with-coverage --cover-package=models
 
 after_success:
    - coveralls
